# windows_service

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  prepare_reproc.bat  resource.h  service_base.cpp  service_base.h  service_installer.cpp  service_installer.h  updater_service.cpp  updater_service.h  user_tracker_service.cpp  user_tracker_service.h  windows_service.aps  windows_service.rc  windows_service.sln  windows_service.vcxproj  windows_service.vcxproj.filters
